vcs/specs/parser/fail/attributes/invalid_attribute_args.vr
// @test: parse-fail
// @level: L0
// @tags: parser, attributes, invalid-args, error
// @description: Test invalid attribute arguments with leading comma
// @expected-error: E012

@derive(,)
type Foo is { x: Int };
